--- a/Project/templates/base.html
+++ b/Project/templates/base.html
@@ -9,19 +9,23 @@
 
     <body>
     <!-- add desired ut logo here here -->
-    <img src="static/wordLogo.jpg" alt="ut logo">
+    <img src="static/wordLogo.jpg" alt="ut logo" width="400">
 
 
     <!-- add bootstrap nav bar here -->
-    <nav class="navbar navbar-expand-lg navbar navbar-dark " style="background-color: #E82F2FFF;">
+<div class="row">
 
+  <div class="col-sm-4" style="background-color: #E82F2FFF;"> </div>
+  <div class="col-sm-7" style="background-color: #E82F2FFF;">
+
+    <nav class="navbar navbar-expand-lg navbar navbar-dark " style="background-color: #E82F2FFF;" >
         <!-- where nav bar was -->
       <a class="navbar-brand" href="#"></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav">
+        <ul class="navbar-nav ml-auto ">
           <li class="nav-item active">
             <a class="nav-link" href="http://127.0.0.1:5000">Home <span class="sr-only">(current)</span></a>
           </li>
@@ -36,14 +40,18 @@
               More
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="#">Reserve something?</a>
+              <a class="dropdown-item" href="http://127.0.0.1:5000/calendly">Reserve something?</a>
               <a class="dropdown-item" href="http://127.0.0.1:5000/login">Login</a>
               <a class="dropdown-item" href="#">EMERGENCY</a>
+                <a class="dropdown-item" href="http://127.0.0.1:5000/test">Test Page</a>
             </div>
           </li>
         </ul>
       </div>
     </nav>
+    </div>
+    <div class="col-sm-1" style="background-color: #E82F2FFF;"> </div>
+  </div>
 
     <!-- unique page stuff goes between block and endblock -->
     {% block content %}
