--- a/Project/templates/login.html
+++ b/Project/templates/login.html
@@ -7,6 +7,8 @@
   </head>
 
     <body>
+
+         <!-- UT logo starts here  -->
         <section class="vh-100">
           <div class="container-fluid h-custom">
             <div class="row d-flex justify-content-center align-items-center h-100">
@@ -15,7 +17,7 @@
                  class="img-fluid" alt="UT Logo">
               </div>
               <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
-                <form>
+
                     <br>
                     <br>
                     <!--
@@ -23,87 +25,47 @@
                     <p class="text-center fw-bold mx-3 mb-0">Or</p>
                   </div> -->
 
-                  <!-- Email input -->
-                  <div class="form-outline mb-4">
-                    <input type="email" id="form3Example3" class="form-control form-control-lg"
-                      placeholder="Enter a valid email address" />
-                    <label class="form-label" for="form3Example3">Email address</label>
-                  </div>
+                  <!-- Form Starts here  -->
+                  <form action="{{ url_for('login') }}" method="post">
 
-                  <!-- Password input -->
-                  <div class="form-outline mb-3">
-                    <input type="password" id="form3Example4" class="form-control form-control-lg"
-                      placeholder="Enter password" />
-                    <label class="form-label" for="form3Example4">Password</label>
-                  </div>
-
-                  <div class="d-flex justify-content-between align-items-center">
-                    <!-- Checkbox -->
-                    <div class="form-check mb-0">
-                      <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3" />
-                      <label class="form-check-label" for="form2Example3">
-                        Remember me
-                      </label>
-
-                        <!-- forgot password -->
+                      <!-- Username  -->
+                    <div class="form-group mb-4">
+                      <label for="username">Username</label>
+                      <input type="text" class="form-control form-control-lg" id="username" name="username"
+                      placeholder="Enter a valid email address"/>
                     </div>
-                    <a href="http://127.0.0.1:5000/forgotPassword" class="text-body">Forgot password?</a>
-                  </div>
 
-                    <!-- login button / register -->
-                  <div class="text-center text-lg-start mt-4 pt-2">
-                    <button type="button" class="btn btn-primary btn-lg"
-                      style="padding-left: 2.5rem; padding-right: 2.5rem;">Login</button>
-                    <p class="small fw-bold mt-2 pt-1 mb-0">Don't have an account? <a href="http://127.0.0.1:5000/signup"
-                        class="link-danger">Register</a></p>
-                  </div>
+                      <!-- password  -->
+                    <div class="form-group mb-3">
+                      <label for="password">Password</label>
+                      <input type="password" class="form-control form-control-lg" id="password" name="password" placeholder="Enter password">
+                    </div>
 
-                </form>
+                      <!-- remember me / forgot password-->
+                    <div class="d-flex justify-content-between align-items-center">
+                        <div class="form-check mb-0">
+                            <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3">
+                            <label class="form-check-label" for="form2Example3">
+                                Remember Me
+                            </label>
+                        </div>
+                        <a href="http://127.0.0.1:5000/forgotPassword" class="text-body">Forgot password?</a>
+                    </div>
+
+                      <!-- login button -->
+                      <div>
+                          <button type="submit" class="btn btn-primary btn-login text-uppercase fw-bold"
+                                   style="padding-left: 2.5rem; padding-right: 2.5rem;">Login
+                          </button>
+
+                          <p class="small fw-bold mt-2 pt-1 mb-0">Don't have an account? <a href="http://127.0.0.1:5000/signup"
+                                class="link-danger">Register</a></p>
+                      </div>
+                  </form>
               </div>
             </div>
           </div>
+        </section>
     </body>
+
 {% endblock %}
-
-<!-- BOTTOM CODE
-  <div
-    class="d-flex flex-column flex-md-row text-center text-md-start justify-content-between py-4 px-4 px-xl-5 bg-primary">
-     Copyright
-    <div class="text-white mb-3 mb-md-0">
-      Copyright © 2020. All rights reserved.
-    </div>
-
-    <div>
-      <a href="#!" class="text-white me-4">
-        <i class="fab fa-facebook-f"></i>
-      </a>
-      <a href="#!" class="text-white me-4">
-        <i class="fab fa-twitter"></i>
-      </a>
-      <a href="#!" class="text-white me-4">
-        <i class="fab fa-google"></i>
-      </a>
-      <a href="#!" class="text-white">
-        <i class="fab fa-linkedin-in"></i>
-      </a>
-    </div>
-
-  </div>
-</section>
-
-
-
-    Original login code
-    <h1>Login</h1>
-    <form action="#" method="post" style="position: absolute; top: 750px; right: 300px;" >
-      <label for="username">Username:</label>
-      <input type="text" id="username" name="username"><br><br>
-      <label for="password">Password:</label>
-      <input type="password" id="password" name="password"><br><br>
-      <input type="submit" value="Submit">
-    </form>
-
-    <br>
-    <img src="static/utlogo.png" alt="ut logo" style="position: absolute; top: 600px; right: 700px;">
--->
-
