--- a/Project/templates/login.html
+++ b/Project/templates/login.html
@@ -18,12 +18,9 @@
               </div>
               <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
 
-                    <br>
-                    <br>
-                    <!--
                   <div class="divider d-flex align-items-center my-4">
-                    <p class="text-center fw-bold mx-3 mb-0">Or</p>
-                  </div> -->
+                    <p class="text-center fw-bold mx-3 mb-0"></p>
+                  </div>
 
                   <!-- Form Starts here  -->
                   <form action="{{ url_for('login') }}" method="post">
@@ -52,6 +49,7 @@
                         <a href="http://127.0.0.1:5000/forgotPassword" class="text-body">Forgot password?</a>
                     </div>
 
+                      <br>
                       <!-- login button -->
                       <div>
                           <button type="submit" class="btn btn-primary btn-login text-uppercase fw-bold"
