--- a/Project/templates/homePage.html
+++ b/Project/templates/homePage.html
@@ -10,5 +10,15 @@
 <body>
 
 <h1>Fake home page</h1>
+    <div style="display: flex;">
+  <div style="margin-right: 10px;">
+    <img src="https://i.pinimg.com/originals/25/ff/61/25ff61c45cea1c5a3b9aff00e19d59a2.png" alt="big-image-description" width="700" height="400">
+  </div>
+  <div style="display: flex; flex-direction: column;">
+    <img src="https://i.pinimg.com/originals/25/ff/61/25ff61c45cea1c5a3b9aff00e19d59a2.png" alt="small-image-description-1" width="500" height="200">
+    <img src="https://i.pinimg.com/originals/25/ff/61/25ff61c45cea1c5a3b9aff00e19d59a2.png" alt="small-image-description-2" width="500" height="200">
+  </div>
+</div>
+
 </body>
 </html>
