--- a/MakerspaceApp/templates/login.html
+++ b/MakerspaceApp/templates/login.html
@@ -4,7 +4,8 @@
   <head>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
-  <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/login_styles.css') }}">
+
   </head>
 
     <body>
@@ -15,7 +16,7 @@
             <div class="row d-flex justify-content-center align-items-center h-100">
               <div class="col-md-9 col-lg-6 col-xl-5">
 
-                <img src="static/utlogo.png"
+                <img src="https://raw.githubusercontent.com/dhartline1001/fab-five/main/MakerspaceApp/static/login_image.png"
                  class="img-fluid red-border" alt="UT Logo">
 
               </div>
