--- a/Makerspace App/templates/about_us.html
+++ b/Makerspace App/templates/about_us.html
@@ -8,16 +8,31 @@
 
 {% block content %}
 
-<h1> Developers for this app </h1>
-    <h3></h3>
-
-    <h3></h3>
-
-    <h3></h3>
-
-    <h3>Alex Rodriguez</h3>
-    <h2>Major: Computer Science</h2>
-
+<div class="w3-container" style="padding: 128px 20px" id="Signatures">
+  <h3 class="w3-left w3-small" style="text-align: left; color: #999;">Developers of the Application:</h3>
+  <div style="display: flex; flex-direction: row; justify-content: space-between;">
+    <div style="flex: 1;">
+      <p class="w3-small" style="margin-right: 20px;color: #999;"><br><br>Derien Hartline<br>
+      BS Computer Science<br>
+      The University of Tampa '25</p>
+    </div>
+    <div style="flex: 1;">
+      <p class="w3-small" style="margin-right: 20px;color: #999;"><br><br>Jackie McDaniels<br>
+      BS Math with Computer Science<br>
+      The University of Tampa '24</p>
+    </div>
+    <div style="flex: 1;">
+      <p class="w3-small" style="margin-right: 20px;color: #999;"><br><br>William Molyneaux<br>
+      BA Data Science<br>
+      University of California, Berkeley '23</p>
+    </div>
+    <div style="flex: 1;">
+      <p class="w3-small" style="margin-right: 20px;color: #999;"><br><br>Alex Rodriguez<br>
+      BS Computer Science<br>
+      The University of Tampa '24</p>
+    </div>
+  </div>
+</div>
 
 
 
